--- a/sds_wallpad/config.json
+++ b/sds_wallpad/config.json
@@ -8,7 +8,7 @@
 	"boot": "auto",
 	"arch": [ "armhf", "armv7", "aarch64", "amd64", "i386" ],
 
-	"auto_uart": true,
+	"uart": true,
 	"map": [ "share:rw" ],
 
 	"options": {
