--- a/kocomOld/config.json
+++ b/kocomOld/config.json
@@ -13,7 +13,7 @@
   "url": "https://github.com/HAKorea/addons",
   "startup": "application",
   "boot": "auto",
-  "auto_uart": true,
+  "uart": true,
   "map": [
     "share:rw"
   ],
